--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
 
 /* Your CSS Code here. */
 #btn{
-	background-color:black;
-	color:white;
+	background-color:rgb(0,0,0);
+	color:rgb(255,255,255);
 	border-radius:5px;
+	border:none;
+	
 	
 }
 #btn:hover{
